was able to add with images locally to the JSON file by adding the public static on the server.js. I was also able to make the GO board with the pictures and align them correctly in the container

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,7 +15,7 @@
   color: white;
 }
 .background{
-  background: url("../src/Images/whitePuzzle.jpg");
+  /* background: url("../public/Images/whitePuzzle.jpg"); */
   -webkit-background-size: contain;
   -moz-background-size: contain;
   background-size: contain;
